--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
             <div class="profile"><img src="images/Profile.png" alt=""></div>
         </nav>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light">
             <a class="navbar-brand" href="#">
                 <img src="images/Cookpal 1.png" alt="">  
             </a>
